--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "decilitre",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "A versatile CSS stylesheet for quick startup, providing a solid foundation while getting out of your way as soon as possible (WIP)",
   "scripts": {
-    "build": "sass src/decilitre.scss dist/decilitre.css &&  sass src/decilitre.scss dist/decilitre.min.css --style compressed",
-    "dev:sass": "sass --watch src/decilitre.scss dist/decilitre.css",
+    "build": "sass src/modules.scss:dist/decilitre.css src/utilities.scss:dist/utilities.css &&  sass src/modules.scss:dist/decilitre.min.css src/utilities.scss:dist/utilities.min.css --style compressed",
+    "dev:sass": "sass --watch src/modules.scss:dist/decilitre.css src/utilities.scss:dist/utilities.css",
     "dev:vite": "vite",
     "dev": "concurrently --names \"sass,vite\" -c \"yellow.bold,magenta.bold\" \"pnpm dev:sass\" \"pnpm dev:vite\""
   },
