--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build Docs
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies & build
         run: |
           npm ci
-          npm run build:docs          
+          npm run build:docs
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
