--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [18.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -23,8 +23,8 @@ jobs:
 
       - name: Install dependencies & build
         run: |
-          npm ci
-          npm run build:docs
+          pnpm ci
+          pnpm run build:docs
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
