--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install dependencies & build
         run: |
-          pnpm ci
+          pnpm install
           pnpm run build:docs
 
       - name: Deploy
